<resources>
    <string name="app_name">WanAndroid</string>
    <string name="bottom_menu_home">首页</string>
    <string name="bottom_menu_navigation">导航</string>
    <string name="bottom_menu_system">体系</string>
    <string name="bottom_menu_project">项目</string>
    <string name="bottom_menu_mine">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">根据关键词搜索</string>
    <string name="tag">标签</string>
    <string name="text_new">新</string>
    <string name="text_top">置顶</string>
    <string name="text_issue">本站发布</string>
    <string name="text_ask">问答</string>
    <string name="author">作者</string>
    <string name="sort">分类</string>
    <string name="time">时间</string>
    <string name="loadingError">加载失败</string>
    <string name="networkError">网络连接错误,点击屏幕重试</string>
    <string name="setting">设置标签</string>
    <string name="unFollow">未关注</string>
    <string name="tryagain">点击重试</string>
    <string name="scan">扫描</string>
    <string name="top">置顶</string>
    <string name="hotkey">搜索热词</string>
    <string name="history_search">历史搜索</string>
    <string name="empty">没数据了</string>
    <string name="retry">retry</string>
    <string name="user_tip">请先登录</string>
    <string name="integral">积分排行</string>
    <string name="TODO">TODO</string>
    <string name="collect">我的收藏</string>
    <string name="username">username</string>
    <string name="login">登录</string>
    <string name="password">password</string>
    <string name="register">注册</string>
    <string name="repassword">repassword</string>
    <string name="myIntegral">我的积分:</string>
</resources>