<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/bottom_menu_home"
        app:showAsAction="ifRoom"
        android:title="@string/bottom_menu_home"
        android:icon="@drawable/home"/>

    <item android:id="@+id/bottom_menu_navigation"
        app:showAsAction="ifRoom"
        android:title="@string/bottom_menu_navigation"
        android:icon="@drawable/navigation"/>

    <item android:id="@+id/bottom_menu_wechat"
        app:showAsAction="ifRoom"
        android:title="@string/bottom_menu_wechat"
        android:icon="@drawable/weixin"/>

    <item android:id="@+id/bottom_menu_project"
        app:showAsAction="ifRoom"
        android:title="@string/bottom_menu_project"
        android:icon="@drawable/project"/>

    <item android:id="@+id/bottom_menu_minr"
        app:showAsAction="ifRoom"
        android:title="@string/bottom_menu_mine"
        android:icon="@drawable/mine"/>

</menu>