<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/text_new"
            android:background="@drawable/textview_border"
            android:textSize="22sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/text_new"
            app:layout_constraintBaseline_toBaselineOf="@id/text_new"
            app:layout_goneMarginStart="10dp"
            android:layout_marginStart="10dp"
            android:textSize="24sp"
            tools:text="2222222"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/heart"
            android:layout_marginTop="10dp"
            app:layout_constraintBaseline_toBaselineOf="@id/text_new"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_top"
            app:layout_constraintTop_toBottomOf="@id/text_new"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_issue"
            android:background="@drawable/textview_border"
            android:text="@string/text_top"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            app:layout_constraintHorizontal_chainStyle="spread"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_issue"
            android:text="@string/text_issue"
            app:layout_constraintStart_toEndOf="@id/text_top"
            app:layout_constraintEnd_toStartOf="@id/text_ask"
            app:layout_constraintBaseline_toBaselineOf="@id/text_top"
            android:background="@drawable/textview_border"
            android:textSize="22sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_ask"
            app:layout_constraintStart_toEndOf="@id/text_issue"
            app:layout_constraintEnd_toStartOf="@id/text_author"
            app:layout_constraintBaseline_toBaselineOf="@id/text_top"
            android:textSize="22sp"
            android:background="@drawable/textview_border"
            android:text="@string/text_ask"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_author"
            app:layout_constraintStart_toEndOf="@id/text_ask"
            app:layout_constraintEnd_toStartOf="@id/text_sort"
            app:layout_constraintBaseline_toBaselineOf="@id/text_top"
            android:textSize="22sp"
            android:text="@string/author"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_sort"
            app:layout_constraintStart_toEndOf="@id/text_author"
            app:layout_constraintEnd_toStartOf="@id/text_time"
            app:layout_constraintBaseline_toBaselineOf="@id/text_top"
            android:textSize="22sp"
            android:text="@string/sort"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_time"
            app:layout_constraintStart_toEndOf="@id/text_sort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/text_top"
            android:textSize="22sp"
            android:text="@string/time"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


<!--  <LinearLayout-->
<!--      android:layout_width="match_parent"-->
<!--      android:layout_height="match_parent"-->
<!--      android:orientation="vertical">-->

<!--      <LinearLayout-->
<!--          android:layout_width="match_parent"-->
<!--          android:layout_height="wrap_content"-->
<!--          android:orientation="horizontal">-->

<!--          <TextView-->
<!--              android:layout_width="wrap_content"-->
<!--              android:layout_height="wrap_content"-->
<!--              android:id="@+id/text_new"-->
<!--              android:text="@string/text_new"-->
<!--              android:layout_margin="10dp"-->
<!--              android:textSize="22sp"-->
<!--              android:background="@drawable/textview_border"/>-->

<!--          <TextView-->
<!--              android:layout_width="wrap_content"-->
<!--              android:layout_height="wrap_content"-->
<!--              android:id="@+id/text_title"-->
<!--              android:textSize="24sp"-->
<!--              android:layout_margin="10dp"/>-->

<!--          <ImageView-->
<!--              android:layout_width="30dp"-->
<!--              android:layout_height="30dp"-->
<!--              android:background="@drawable/heart"-->
<!--              android:layout_margin="10dp"/>-->
<!--      </LinearLayout>-->

<!--      <LinearLayout-->
<!--          android:layout_width="match_parent"-->
<!--          android:layout_height="wrap_content"-->
<!--          android:orientation="horizontal">-->

<!--          <TextView-->
<!--              android:layout_width="wrap_content"-->
<!--              android:layout_height="wrap_content"-->
<!--              android:id="@+id/text_author"-->
<!--              android:textSize="24sp"-->
<!--              android:layout_margin="10dp"/>-->

<!--          <TextView-->
<!--              android:layout_width="wrap_content"-->
<!--              android:layout_height="wrap_content"-->
<!--              android:id="@+id/text_sort"-->
<!--              android:textSize="24sp"-->
<!--              android:layout_margin="10dp"/>-->

<!--          <TextView-->
<!--              android:layout_width="wrap_content"-->
<!--              android:layout_height="wrap_content"-->
<!--              android:id="@+id/text_time"-->
<!--              android:textSize="24sp"-->
<!--              android:layout_margin="10dp"/>-->
<!--      </LinearLayout>-->
<!--  </LinearLayout>-->
</com.google.android.material.card.MaterialCardView>