<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mmp.wanandroid.ui.mine.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.mine.view.LoginActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="22sp"
            android:text="@string/login"
            android:textStyle="bold"
            android:id="@+id/text_login"
            android:layout_marginTop="70dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_lUsername"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:hint="@string/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_eUsername"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@{viewModel.username}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_lPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_lUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_ePassword"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@{viewModel.password}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_login"
            app:layout_constraintTop_toBottomOf="@id/login_lPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login"
            android:layout_marginTop="20dp"
            android:backgroundTint="#ff0000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_register"
            app:layout_constraintTop_toBottomOf="@id/bt_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="还没有账号?先去注册吧"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_visitor"
            app:layout_constraintTop_toBottomOf="@id/text_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="俺想当个游客，先逛逛,嘻嘻"
            android:layout_marginTop="30dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>